fix(ui): increase horizontal spacing between cards

--- a/static/assets/css/custom-style.css
+++ b/static/assets/css/custom-style.css
@@ -27,13 +27,13 @@ html {
 
 /* 卡片容器对齐 */
 .row.io-mx-n2 {
-    margin-left: -8px;
-    margin-right: -8px;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 .row.io-mx-n2>[class*='col-'] {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* 确保卡片网格对齐 */
